2011-03-11  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson

        <rdar://problem/8648311> and https://bugs.webkit.org/show_bug.cgi?id=56216
        Rework disabled IconDatabase builds while allowing for a pluggable icon database implementation.

        * Misc/WebIconDatabase.mm:
        (+[WebIconDatabase _checkIntegrityBeforeOpening]): Call these static methods on IconDatabase::, not iconDatabase().
        (-[WebIconDatabase _startUpIconDatabase]): Ditto.
        (importToWebCoreFormat):

2011-03-11  Anton D'Auria  <adauria@apple.com>

        Reviewed and landed by Brady Eidson.

        https://bugs.webkit.org/show_bug.cgi?id=51878
        Add WebKit1 API to view and delete local storage

        * Storage/WebStorageManager.mm: Added.
        (+[WebStorageManager sharedWebStorageManager]):
        (-[WebStorageManager origins]):
        (-[WebStorageManager deleteAllOrigins]):
        (-[WebStorageManager deleteOrigin:]):
        (-[WebStorageManager syncLocalStorage]):
        (-[WebStorageManager syncFileSystemAndTrackerDatabase]):
        (storageDirectoryPath):
        (WebKitInitializeStorageIfNecessary):
        * Storage/WebStorageManagerInternal.h: Added.
        * Storage/WebStorageManagerPrivate.h: Added.
        * Storage/WebStorageTrackerClient.h: Added.
        * Storage/WebStorageTrackerClient.mm: Added.
        (WebStorageTrackerClient::sharedWebStorageTrackerClient):
        (WebStorageTrackerClient::WebStorageTrackerClient):
        (WebStorageTrackerClient::~WebStorageTrackerClient):
        (WebStorageTrackerClient::dispatchDidModifyOriginOnMainThread):
        (WebStorageTrackerClient::dispatchDidModifyOrigin):
        * WebCoreSupport/WebSecurityOrigin.mm:
        (-[WebSecurityOrigin protocol]):
        (-[WebSecurityOrigin host]):
        (-[WebSecurityOrigin databaseIdentifier]):
        (-[WebSecurityOrigin domain]):
        (-[WebSecurityOrigin _initWithWebCoreSecurityOrigin:]):